--- a/index.html
+++ b/index.html
@@ -5,19 +5,31 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Projet BETL</title>
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
 <style>
-  :root{--bg:#0b0f14;--card:#0f1720;--muted:#9aa6b2;--accent:#0a84ff;--glass:rgba(255,255,255,0.06)}
+  :root{
+    --bg:#0b0f14;
+    --card:#0f1720;
+    --muted:#9aa6b2;
+    --accent:#0a84ff;
+    --glass:rgba(255,255,255,0.06);
+  }
   html,body{height:100%;margin:0;background:var(--bg);color:#fff;font-family:Inter,Arial,Helvetica,sans-serif}
-  /* header compact */
-  header{display:flex;align-items:center;gap:10px;padding:8px 12px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);box-shadow:0 6px 18px rgba(0,0,0,0.35)}
-  .logo{height:44px;width:44px;object-fit:contain;border-radius:6px;cursor:pointer}
-  .title{font-weight:700;font-size:15px;line-height:1}
-  .subtitle{font-size:11px;color:var(--muted)}
-  .top-controls{margin-left:auto;display:flex;gap:8px;align-items:center}
-  .pill{background:var(--glass);border-radius:10px;padding:7px 10px;border:0;color:#fff;cursor:pointer;font-size:13px}
-  .pill.primary{background:var(--accent);color:#000;font-weight:600}
-  .small{padding:6px 8px;font-size:12px;border-radius:8px}
-  .mini{padding:6px 8px;font-size:12px;border-radius:8px}
+  /* header compact + logo agrandi + texte à gauche */
+  header{
+    display:flex;
+    align-items:center;
+    gap:12px;
+    padding:10px 14px;
+    background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);
+    box-shadow:0 6px 18px rgba(0,0,0,0.35);
+  }
+  .logo{height:72px;width:72px;object-fit:contain;border-radius:8px;cursor:pointer;flex:0 0 auto}
+  .titleWrap{display:flex;flex-direction:column;justify-content:center;align-items:flex-start}
+  .title{font-weight:800;font-size:20px;margin:0;padding:0}
+  .subtitle{font-size:12px;color:var(--muted);margin-top:2px}
+  /* remove top-controls – keep space clean */
+  .top-controls{margin-left:auto;display:flex;gap:8px;align-items:center;visibility:hidden;height:0}
   .container{padding:12px;display:grid;grid-template-columns:1fr 320px;gap:12px}
   main.card{background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);border-radius:10px;padding:10px;min-height:60vh}
   aside.card{background:var(--card);border-radius:10px;padding:12px;max-height:78vh;overflow:auto}
@@ -36,8 +48,17 @@
   .preview-iframe{width:100%;height:100%;border:0}
   .splash{position:fixed;inset:0;background:#000;display:flex;flex-direction:column;align-items:center;justify-content:center;z-index:2000}
   .splash.hidden{opacity:0;pointer-events:none;display:none;transition:opacity .35s}
-  .splash-logo{width:180px;max-width:50vw;margin-bottom:8px;filter:drop-shadow(0 8px 30px rgba(0,0,0,0.6))}
-  @media(max-width:980px){.container{grid-template-columns:1fr;padding:10px}aside.card{order:2}main.card{order:1}model-viewer{height:46vh}}
+  .splash-logo{width:220px;max-width:60vw;margin-bottom:8px;filter:drop-shadow(0 8px 30px rgba(0,0,0,0.6))}
+  @media(max-width:980px){
+    .logo{height:56px;width:56px}
+    .title{font-size:16px}
+    .container{grid-template-columns:1fr;padding:10px}
+    aside.card{order:2}
+    main.card{order:1}
+    model-viewer{height:46vh}
+  }
+  /* small utility */
+  .pill{background:var(--glass);border-radius:10px;padding:8px 12px;border:0;color:#fff;cursor:pointer}
 </style>
 </head>
 <body>
@@ -50,18 +71,14 @@
 
 <!-- HEADER -->
 <header>
-  <img src="BETL.png" alt="BETL" class="logo" onclick="window.open('https://www.facebook.com/BETL120','_blank')" onerror="this.style.display='none'">
-  <div>
+  <img src="BETL.png" alt="BETL" class="logo" onclick="window.open('https://www.facebook.com/BETL121','_blank')" onerror="this.style.display='none'">
+  <div class="titleWrap">
     <div class="title">BETL — Visualisation 3D & Plans</div>
     <div class="subtitle">Voir ta maison avant de l'habiter</div>
   </div>
 
-  <div class="top-controls">
-    <button class="pill small" onclick="openPlans()">Plans</button>
-    <button class="pill primary mini" id="arLaunch">Voir en AR</button>
-    <button class="pill mini" id="btnModelArch" onclick="selectModelCategory('Architecture')">Modèle Arch</button>
-    <button class="pill mini" id="btnModelGC" onclick="selectModelCategory('GC')">Modèle GC</button>
-  </div>
+  <!-- top-controls hidden (no Plans / AR here) -->
+  <div class="top-controls" aria-hidden="true"></div>
 </header>
 
 <!-- CONTENT -->
@@ -74,6 +91,11 @@
 
     <div>
       <model-viewer id="viewer" src="models/Djanet_arch.glb" ar ar-modes="scene-viewer webxr" camera-controls exposure="1"></model-viewer>
+    </div>
+
+    <!-- AR button remains in content area -->
+    <div style="margin-top:12px;display:flex;justify-content:center">
+      <button id="arLaunch" class="pill" style="background:var(--accent);color:#000;font-weight:700;padding:10px 18px;border-radius:12px">Voir en Réalité Augmentée</button>
     </div>
 
     <div id="progressWrap" class="progress-wrap" style="">
@@ -119,16 +141,15 @@
 
   function encodePath(s){return encodeURIComponent(s).replace(/%2F/g,'/');}
 
-  /* Render plans list */
   function renderPlans(cat){
     const list = document.getElementById('plansList');
-    list.innerHTML = '';
+    list.innerHTML='';
     const files = PDFS[cat] || [];
     if(!files.length){ list.innerHTML = '<div style="color:var(--muted)">Aucun document</div>'; return; }
     files.forEach(f=>{
       const row = document.createElement('div');
       row.className = 'plan-item';
-      const href = 'pdfs/' + encodePath(cat) + '/' + encodePath(f);
+      const href = 'pdfs/'+encodePath(cat)+'/'+encodePath(f);
       row.innerHTML = `
         <div class="name">${f}</div>
         <div class="plan-actions">
@@ -138,20 +159,6 @@
       `;
       list.appendChild(row);
     });
-  }
-
-  /* choose model by category (buttons) */
-  function selectModelCategory(cat){
-    if(!MODELS || !MODELS.length) return;
-    let sel = '';
-    for(const m of MODELS){
-      const low = m.toLowerCase();
-      if(cat==='GC' && low.includes('gc')) { sel = 'models/'+m; break; }
-      if(cat==='Architecture' && (low.includes('arch')||low.includes('architect'))) { sel = 'models/'+m; break; }
-    }
-    if(!sel && MODELS.length) sel = 'models/'+MODELS[0];
-    const v = document.getElementById('viewer');
-    if(v && sel) v.src = sel;
   }
 
   document.addEventListener('DOMContentLoaded', ()=> {
@@ -173,7 +180,6 @@
         if(pbar) pbar.style.width = pct + '%';
         if(plabel) plabel.textContent = pct + '%';
         if(document.getElementById('splashPct')) document.getElementById('splashPct').textContent = pct + '%';
-        // when complete: hide splash and hide progress bar after short delay
         if(pct >= 100){
           if(splash) setTimeout(()=>{ splash.classList.add('hidden'); }, 350);
           if(progressWrap) setTimeout(()=>{ progressWrap.style.opacity = '0'; progressWrap.style.pointerEvents = 'none'; setTimeout(()=>progressWrap.style.display='none',300); }, 600);
@@ -182,7 +188,6 @@
       });
     }
 
-    /* AR launch button */
     const ar = document.getElementById('arLaunch');
     if(ar && document.getElementById('viewer')){
       ar.onclick = async ()=> {
@@ -190,19 +195,6 @@
         catch(e){ alert("RA non supportée — ouvre avec Chrome Android."); }
       };
     }
-
-    /* model quick-select buttons: hide if no matching model */
-    if(!(true)){
-      const b1 = document.getElementById('btnModelArch'); if(b1) b1.style.display='none';
-      const b2 = document.getElementById('btnModelGC'); if(b2) b2.style.display='none';
-    } else {
-      // if there is no arch-like model, grey the button
-      const anyArch = MODELS.some(m => m.toLowerCase().includes('arch')||m.toLowerCase().includes('architect'));
-      const anyGc = MODELS.some(m => m.toLowerCase().includes('gc')||m.toLowerCase().includes('gc'));
-      const b1 = document.getElementById('btnModelArch'); if(b1 && !anyArch) b1.style.opacity = '0.5';
-      const b2 = document.getElementById('btnModelGC'); if(b2 && !anyGc) b2.style.opacity = '0.5';
-    }
-
   });
 
   function openPreview(title, path){
@@ -222,7 +214,7 @@
       URL.revokeObjectURL(a.href);
     }).catch(()=>window.open(url,'_blank'));
   }
-
 </script>
+
 </body>
 </html>
