--- a/index.html
+++ b/index.html
@@ -7,40 +7,27 @@
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 <style>
-  :root{
-    --bg:#0b0f14;
-    --card:#0f1720;
-    --muted:#9aa6b2;
-    --accent:#0a84ff;
-    --glass:rgba(255,255,255,0.06);
-  }
+  :root{--bg:#0b0f14;--card:#0f1720;--muted:#9aa6b2;--accent:#0a84ff;--glass:rgba(255,255,255,0.06)}
   html,body{height:100%;margin:0;background:var(--bg);color:#fff;font-family:Inter,Arial,Helvetica,sans-serif}
-  /* header compact + logo agrandi + texte à gauche */
-  header{
-    display:flex;
-    align-items:center;
-    gap:12px;
-    padding:10px 14px;
-    background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);
-    box-shadow:0 6px 18px rgba(0,0,0,0.35);
-  }
+  header{display:flex;align-items:center;gap:12px;padding:10px 14px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);box-shadow:0 6px 18px rgba(0,0,0,0.35)}
   .logo{height:72px;width:72px;object-fit:contain;border-radius:8px;cursor:pointer;flex:0 0 auto}
   .titleWrap{display:flex;flex-direction:column;justify-content:center;align-items:flex-start}
   .title{font-weight:800;font-size:20px;margin:0;padding:0}
   .subtitle{font-size:12px;color:var(--muted);margin-top:2px}
-  /* remove top-controls – keep space clean */
-  .top-controls{margin-left:auto;display:flex;gap:8px;align-items:center;visibility:hidden;height:0}
+  /* small selector next to title */
+  .hdr-controls{margin-left:auto;display:flex;gap:8px;align-items:center}
+  select.model-select{background:var(--glass);border-radius:8px;padding:6px 8px;color:#fff;border:0}
   .container{padding:12px;display:grid;grid-template-columns:1fr 320px;gap:12px}
   main.card{background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);border-radius:10px;padding:10px;min-height:60vh}
   aside.card{background:var(--card);border-radius:10px;padding:12px;max-height:78vh;overflow:auto}
-  model-viewer{width:100%;height:58vh;border-radius:10px;background:#111}
+  model-viewer{width:100%;height:58vh;border-radius:10px;background:#111;display:block}
+  .ar-button{position:relative;display:inline-block;margin-top:12px;padding:12px 18px;border-radius:12px;background:#fff;color:#000;border:0;font-weight:700;cursor:pointer}
   .progress-wrap{display:flex;align-items:center;gap:10px;margin-top:10px;transition:opacity .25s}
   .progress{flex:1;height:10px;background:#111;border-radius:999px;overflow:hidden}
   .progress > span{display:block;height:100%;width:0;background:linear-gradient(90deg,var(--accent),#4bd3ff);transition:width .2s}
   .progress-label{min-width:44px;text-align:right;color:var(--muted);font-size:13px}
   .plan-item{display:flex;justify-content:space-between;align-items:center;padding:8px;border-radius:8px;background:#0b1116;margin-bottom:8px}
   .plan-item .name{max-width:66%;font-size:14px;word-break:break-word;color:#e6eef8}
-  .plan-actions{display:flex;gap:8px}
   .modal-backdrop{position:fixed;inset:0;background:rgba(0,0,0,0.6);display:none;align-items:center;justify-content:center;z-index:1200}
   .modal{width:min(1000px,96%);height:min(84vh,900px);background:#08101a;border-radius:10px;overflow:hidden;display:flex;flex-direction:column}
   .modal-header{padding:10px;background:#07101a;display:flex;justify-content:space-between;align-items:center}
@@ -49,16 +36,7 @@
   .splash{position:fixed;inset:0;background:#000;display:flex;flex-direction:column;align-items:center;justify-content:center;z-index:2000}
   .splash.hidden{opacity:0;pointer-events:none;display:none;transition:opacity .35s}
   .splash-logo{width:220px;max-width:60vw;margin-bottom:8px;filter:drop-shadow(0 8px 30px rgba(0,0,0,0.6))}
-  @media(max-width:980px){
-    .logo{height:56px;width:56px}
-    .title{font-size:16px}
-    .container{grid-template-columns:1fr;padding:10px}
-    aside.card{order:2}
-    main.card{order:1}
-    model-viewer{height:46vh}
-  }
-  /* small utility */
-  .pill{background:var(--glass);border-radius:10px;padding:8px 12px;border:0;color:#fff;cursor:pointer}
+  @media(max-width:980px){.logo{height:56px;width:56px}.title{font-size:16px}.container{grid-template-columns:1fr;padding:10px}aside.card{order:2}main.card{order:1}model-viewer{height:46vh}}
 </style>
 </head>
 <body>
@@ -77,8 +55,9 @@
     <div class="subtitle">Voir ta maison avant de l'habiter</div>
   </div>
 
-  <!-- top-controls hidden (no Plans / AR here) -->
-  <div class="top-controls" aria-hidden="true"></div>
+  <div class="hdr-controls" id="hdrControls">
+    <!-- model selector injected by JS if models exist -->
+  </div>
 </header>
 
 <!-- CONTENT -->
@@ -89,13 +68,10 @@
       <div style="color:var(--muted);font-size:12px">2 modèle(s)</div>
     </div>
 
-    <div>
-      <model-viewer id="viewer" src="models/Djanet_arch.glb" ar ar-modes="scene-viewer webxr" camera-controls exposure="1"></model-viewer>
-    </div>
-
-    <!-- AR button remains in content area -->
-    <div style="margin-top:12px;display:flex;justify-content:center">
-      <button id="arLaunch" class="pill" style="background:var(--accent);color:#000;font-weight:700;padding:10px 18px;border-radius:12px">Voir en Réalité Augmentée</button>
+    <div style="text-align:center">
+      <model-viewer id="viewer" src="models/Djanet_arch.glb" ar ar-modes="scene-viewer webxr" camera-controls exposure="1">
+          <button slot="ar-button" class="ar-button">Voir en Réalité Augmentée</button>
+        </model-viewer>
     </div>
 
     <div id="progressWrap" class="progress-wrap" style="">
@@ -140,6 +116,45 @@
   const PDFS = {"Architecture":["bentelha permis -modi02 mise en page-Model.pdf"],"GC":["permis (1)-Model.pdf"],"Autre":["BETL.png"]};
 
   function encodePath(s){return encodeURIComponent(s).replace(/%2F/g,'/');}
+
+  /* inject header selector when models exist */
+  (function initHeaderSelector(){
+    const hdr = document.getElementById('hdrControls');
+    if(!hdr) return;
+    if(!MODELS || MODELS.length === 0) return;
+    // create select with options: "Choisir modèle" + Arch/GC + individual file names
+    const sel = document.createElement('select');
+    sel.className = 'model-select';
+    sel.id = 'modelSelect';
+    const opt0 = document.createElement('option');
+    opt0.value = '';
+    opt0.textContent = 'Choisir modèle…';
+    sel.appendChild(opt0);
+
+    // try to find arch/gc named files and add grouping
+    const archs = MODELS.filter(m=>/arch|architect/i.test(m));
+    const gcs = MODELS.filter(m=>/gc|genie|civil/i.test(m));
+    // append arch/gc options if exist
+    if(archs.length) {
+      archs.forEach(m=> { const o=document.createElement('option'); o.value='models/'+m; o.textContent='Architecture — '+m; sel.appendChild(o); });
+    }
+    if(gcs.length) {
+      gcs.forEach(m=> { const o=document.createElement('option'); o.value='models/'+m; o.textContent='Génie Civil — '+m; sel.appendChild(o); });
+    }
+    // append remaining
+    MODELS.forEach(m=>{
+      if(archs.includes(m) || gcs.includes(m)) return;
+      const o=document.createElement('option'); o.value='models/'+m; o.textContent=m; sel.appendChild(o);
+    });
+
+    sel.addEventListener('change', ()=> {
+      const val = sel.value;
+      const v = document.getElementById('viewer');
+      if(v && val) v.src = val;
+    });
+
+    hdr.appendChild(sel);
+  })();
 
   function renderPlans(cat){
     const list = document.getElementById('plansList');
@@ -188,16 +203,11 @@
       });
     }
 
-    const ar = document.getElementById('arLaunch');
-    if(ar && document.getElementById('viewer')){
-      ar.onclick = async ()=> {
-        try{ await document.getElementById('viewer').enterAR(); }
-        catch(e){ alert("RA non supportée — ouvre avec Chrome Android."); }
-      };
-    }
+    /* model-viewer already uses slot ar-button; no header AR button */
+    // nothing else to do here
   });
 
-  function openPreview(title, path){
+  function openPreview(title,path){
     document.getElementById('previewTitle').textContent = title;
     document.getElementById('previewIframe').src = path;
     document.getElementById('previewModal').style.display = 'flex';
